--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,14 @@
 .read-the-docs {
   color: #888;
 }
+
+iframe {
+  overflow: hidden;
+  border: none;
+}
+
+iframe html {
+  background: #f3e29b;
+  overflow: hidden;
+  border: none;
+}
